updates css to avoid overflow 2nd try

--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@ html {
 }
 
 .main {
-  height: 100vh;
-  width: 100vw;
+  min-height: 50vh;
+  min-width: 95vw;
 
   background-color: gray;
   text-align: center;
+
+  padding: 10px;
 }
 
 .main h1 {
@@ -21,9 +23,8 @@ html {
   justify-content: center;
   align-items: center;
 
-  height: 50%;
+  min-height: 50%;
 
-  margin: 10px;
 
   background-color: pink;
   border: 2px solid white;
